# DocuMind-Pro

./: README.md  pyproject.toml
config/: settings.py
data/documents/: test.docx
data/processed/: batch_report_20260105_163812.json  batch_report_20260105_163944.json  batch_report_20260105_170002.json  test.docx_processed_20260105_163944.json  test.docx_processed_20260105_170002.json  test.pdf_processed_20260105_163812.json  test.pdf_processed_20260105_163945.json  test.pdf_processed_20260105_170003.json  test.pptx_processed_20260105_163947.json  test.pptx_processed_20260105_170004.json
data/test_output/: batch_report_20260105_165808.json  batch_report_20260105_165932.json
src/document_processor/: loader.py  main.py  processor.py  test.pptx
